--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -26,10 +26,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Builds the Docker image and runs the benchmarks
-      - name: Run Benchmarks
-        run: |
-          docker build -t snmalloc-bench -f benchmark/Dockerfile . --build-arg benchs=allt
+      # Setup docker buildx
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: benchmark/Dockerfile
+          push: false
+          tags: snmalloc-bench
+          build-args: |
+            benchs=allt
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       # Extracts the benchmark results from the Docker container
       - name: Extract Benchmark Results
