--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,6 +31,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and Push Docker Image
+        id: build
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -45,7 +46,7 @@ jobs:
       # Extracts the benchmark results from the Docker container
       - name: Extract Benchmark Results
         run: |
-          docker cp `docker run -d snmalloc-bench`:/mimalloc-bench/out/bench/benchres.csv benchres.csv
+          docker cp `${{steps.build.outputs.imageid}}`:/mimalloc-bench/out/bench/benchres.csv benchres.csv
 
       # Uploads the benchmark results as an artifact
       - name: Upload Benchmark Results
