Alter connecting to image.

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -39,7 +39,7 @@ jobs:
           push: false
           tags: snmalloc-bench
           build-args: |
-            benchs=allt
+            benchs=cfrac
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
