--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           context: .
           file: benchmark/Dockerfile
-          push: false
+          push: true
           tags: snmalloc-bench
           build-args: |
             benchs=cfrac
