--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -23,6 +23,7 @@ RUN ./build-bench-env.sh lean
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Remove rocksdb .o files to compact image
+RUN apt-get install findutils
 RUN find /mimalloc-bench/extern/rocksdb -name "*.o" -delete
 
 RUN echo "sn /snmalloc/build/libsnmallocshim.so" > /allocs.txt
