--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -37,7 +37,10 @@ RUN ninja libsnmallocshim.so
 
 # Run benchmarks
 ARG benchs=allt
+ARG repeats=1
 WORKDIR /mimalloc-bench/out/bench
-RUN ../../bench.sh --external=/allocs.txt $benchs -r=2
+RUN ../../bench.sh --external=/allocs.txt $benchs -r=$repeats
 
+RUN apt-get install -y python3 python3-pip
+RUN pip3 install --no-cache-dir numpy
 RUN python3 /snmalloc/benchmark/bencher.dev.py /mimalloc-bench/out/benchres.csv > results.json
