--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and Push Docker Image
+      - name: Build and run benchmarks in Docker
         id: docker_build
         uses: docker/build-push-action@v4
         with:
