--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -8,6 +8,8 @@ concurrency:
 
 # Controls when the workflow will run
 on:
+  schedule:
+    - cron: "0 0 * * 1"  # Runs every Monday at midnight UTC
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ main ]
