--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -41,4 +41,5 @@ ARG repeats=1
 WORKDIR /mimalloc-bench/out/bench
 RUN ../../bench.sh --external=/allocs.txt $benchs -r=$repeats
 
+WORKDIR /
 RUN python3 /snmalloc/benchmark/bencher.dev.py /mimalloc-bench/out/bench/benchres.csv
