--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -66,7 +66,7 @@ jobs:
           bencher run \
           --project snmalloc \
           --token '${{ secrets.BENCHER_DEV_API_TOKEN }}' \
-          --branch ${{ github.ref_name }} \
+          --branch main \
           --adapter json \
           --err \
           --file bencher.dev.sn.json
