--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -509,6 +509,10 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
   function(compile name TYPE ${ARGN})
     add_library(${name} ${TYPE} ${ARGN})
     target_link_libraries(${name} PRIVATE snmalloc)
+
+    # PRIVATE linking still touches INTERFACE level linking for unknown reasons.
+    set_target_properties(${name} PROPERTIES INTERFACE_LINK_LIBRARIES "")
+
     target_compile_definitions(${name} PRIVATE "SNMALLOC_USE_${SNMALLOC_CLEANUP}")
 
     add_warning_flags(${name})
