--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -511,6 +511,7 @@ if(NOT SNMALLOC_HEADER_ONLY_LIBRARY)
     target_link_libraries(${name} PRIVATE snmalloc)
 
     # PRIVATE linking still touches INTERFACE level linking for unknown reasons.
+    # Check https://github.com/microsoft/snmalloc/pull/799 for details.
     set_target_properties(${name} PROPERTIES INTERFACE_LINK_LIBRARIES "")
 
     target_compile_definitions(${name} PRIVATE "SNMALLOC_USE_${SNMALLOC_CLEANUP}")
