--- a/snmalloc-rs/Cargo.toml
+++ b/snmalloc-rs/Cargo.toml
@@ -8,7 +8,7 @@ description = "rust bindings of snmalloc."
 keywords = ["snmalloc", "allocator"]
 categories = ["memory-management", "api-bindings"]
 homepage = "https://github.com/microsoft/snmalloc"
-repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
+repository = "https://github.com/microsoft/snmalloc"
 readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
