build(snmalloc-sys): sync features with upstream and fix build-system agnosticism
Added missing features to BuildFeatures struct and implemented conditional defines for correct handling across cc and cmake build systems.

--- a/snmalloc-rs/snmalloc-sys/Cargo.toml
+++ b/snmalloc-rs/snmalloc-sys/Cargo.toml
@@ -33,3 +33,10 @@ notls = []
 stats = []
 usewait-on-address = []
 libc-api = []
+# New features synchronized with CMakeLists.txt
+tracing = []
+fuzzing = []
+vendored-stl = []
+check-loads = []
+pageid = []
+gwp-asan = []
