--- a/snmalloc-rs/snmalloc-sys/Cargo.toml
+++ b/snmalloc-rs/snmalloc-sys/Cargo.toml
@@ -17,7 +17,7 @@ cc = { version = "1.0", optional = true }
 cmake = { version = "0.1", optional = true }
 
 [features]
-default = ["build_cmake"]
+default = ["build_cmake", "usewait-on-address"]
 build_cc = ["cc"]
 build_cmake = ["cmake"]
 qemu = []
