feat(xtask): add benchmark comparison tool for build backends
Add a new workspace member `xtask` containing a CLI tool to compare performance between the `build_cc` and `build_cmake` backends. The tool automates building, running a contention benchmark, and parsing throughput results to verify performance equivalence.

Also includes the new benchmark example `bench_contention` which allocates and deallocates memory across a ring of threads to stress the allocator.

--- a/snmalloc-rs/Cargo.toml
+++ b/snmalloc-rs/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = ["snmalloc-sys"]
+members = ["snmalloc-sys", "xtask"]
 
 [dependencies]
 snmalloc-sys = { version = "0.3.8", path = "snmalloc-sys", default-features = false }
