docs: update README and Cargo.toml for build alignment and new features

--- a/snmalloc-rs/Cargo.toml
+++ b/snmalloc-rs/Cargo.toml
@@ -34,3 +34,9 @@ notls = ["snmalloc-sys/notls"]
 stats = ["snmalloc-sys/stats"]
 usewait-on-address = ["snmalloc-sys/usewait-on-address"]
 libc-api = ["snmalloc-sys/libc-api"]
+tracing = ["snmalloc-sys/tracing"]
+fuzzing = ["snmalloc-sys/fuzzing"]
+vendored-stl = ["snmalloc-sys/vendored-stl"]
+check-loads = ["snmalloc-sys/check-loads"]
+pageid = ["snmalloc-sys/pageid"]
+gwp-asan = ["snmalloc-sys/gwp-asan"]
