--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -48,7 +48,7 @@ jobs:
           --parallel
       
       - name: Test
-        run: >
+        run: |
           cd ${{github.workspace}}/build
           ctest
         
