--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,7 @@
 version: 2
 updates:
 - package-ecosystem: cargo
-  directory: "/"
-  schedule:
-    interval: daily
-  open-pull-requests-limit: 10
-- package-ecosystem: gitsubmodule
-  directory: "/"
+  directory: "/snmalloc-rs"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
