--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Test
         shell: msys2 {0}
         run: |
-          cd build
+          cd "$(cygpath -u "$GITHUB_WORKSPACE")/build"
           ctest
         
